# synx-format

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cspell.json  publish-npm.bat
.github/workflows/: bindings-smoke.yml  release.yml
_guides/: GUIDE.md  GUIDE_DE.md  GUIDE_ES.md  GUIDE_JA.md  GUIDE_RU.md  GUIDE_ZH.md
benchmarks/: LLM_BENCHMARK_GUIDE.md  README.md  package.json
benchmarks/bench_rust/: Cargo.toml
benchmarks/llm-tests/: QUICKSTART.md  README.md  example_results.json  format_results.py  llm_benchmark.py  requirements.txt  test_cases.py  update_readme.py
benchmarks/rust/: Cargo.toml
bindings/c-header/: Cargo.toml
bindings/c-header/include/: synx.h
bindings/c-header/src/: lib.rs
bindings/cpp/: README.md
bindings/go/: README.md
bindings/kotlin/: README.md  build.gradle.kts
bindings/mojo/: README.md
bindings/node/: Cargo.toml  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/swift/: README.md
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/synx-cli/: Cargo.toml
crates/synx-cli/src/: main.rs
crates/synx-core/: Cargo.toml
crates/synx-core/fuzz/: README.md
crates/synx-core/src/: calc.rs  engine.rs  lib.rs  parser.rs  rng.rs  value.rs
crates/synx-format/: Cargo.toml
crates/synx-lsp/: Cargo.toml  README.md
docs/: README.md
docs/guides/: GUIDE.md  GUIDE_DE.md  GUIDE_ES.md  GUIDE_JA.md  GUIDE_RU.md  GUIDE_ZH.md
examples/: active_config.synx  static_config.synx  terrains.synx  typed_config.synx
examples/ai-memory/: README.md
examples/docker-stack/: README.md  docker-compose.yml
examples/docker-stack/config/: app.synx
examples/docker-stack/nginx/: default.conf.template
integrations/: README.md
integrations/ai/: README.md
integrations/ai/synx-adapter/: README.md
integrations/ai/synx-adapter/nodejs/: README.md  package.json
integrations/artifacts/synx-visualizer/: README.md
integrations/godot/synx-gdscript/: .gitignore  project.godot
integrations/godot/synx-gdscript/examples/: demo.gd  demo.tscn
integrations/godot/synx-gdscript/tests/: test_runner.gd
integrations/mcp/: README.md
integrations/mcp/synx-mcp/: README.md
integrations/neovim/synx.nvim/: README.md
integrations/sublime-text/Synx/: README.md  synx.sublime-syntax
integrations/visualstudio/synx-visualstudio/: README.md
integrations/visualstudio/synx-visualstudio/SynxLanguageService/: SynxLanguageService.csproj
integrations/vscode/synx-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
integrations/vscode/synx-vscode/syntaxes/: synx.tmLanguage.json
parsers/: README.md
parsers/cpp/: .gitignore  CMakeLists.txt  README.md
parsers/cpp/examples/ue5/: README.md  SynxPlugin.uplugin
parsers/cpp/examples/ue5/Source/Synx/: Synx.Build.cs
parsers/cpp/examples/ue5/Source/Synx/Private/: Synx.cpp  SynxBlueprintLibrary.cpp  SynxCoreUnity.cpp
parsers/cpp/examples/ue5/Source/Synx/Public/: SynxBlueprintLibrary.h
parsers/cpp/include/synx/: binary.hpp  calc.hpp  diff.hpp  engine.hpp  formatter.hpp  json.hpp  meta.hpp  options.hpp  parse_result.hpp  parser.hpp  result.hpp  stringify.hpp  synx.hpp  value.hpp
parsers/cpp/src/: binary.cpp  calc.cpp  diff.cpp  engine.cpp  engine_internal.hpp  engine_markers.cpp  formatter.cpp  json.cpp  parser.cpp  stringify.cpp  synx.cpp  value.cpp
parsers/cpp/tests/: CMakeLists.txt  test_binary.cpp  test_calc.cpp  test_conformance.cpp  test_diff.cpp  test_engine.cpp  test_helpers.hpp  test_json.cpp  test_main.cpp  test_parser.cpp  test_stringify.cpp  test_value.cpp
parsers/dart/: .gitignore  README.md  pubspec.yaml
parsers/dart/lib/: synx.dart
parsers/dart/lib/src/: binary.dart  calc.dart  diff.dart  engine.dart  formatter.dart  json.dart  meta.dart  options.dart  parser.dart  stringify.dart  value.dart
parsers/dart/test/: binary_test.dart  calc_test.dart  conformance_test.dart  diff_test.dart  engine_test.dart  json_test.dart  parser_test.dart  stringify_test.dart  value_test.dart
parsers/dotnet/: README.md
parsers/dotnet/src/Synx.Core/: Synx.Core.csproj  SynxBinary.cs  SynxFormat.cs  SynxJson.cs  SynxParseResult.cs  SynxParser.cs  SynxValue.cs
parsers/dotnet/tests/Synx.Core.Tests/: EngineActiveTests.cs
parsers/dotnet/tools/Synx.FuzzReplay/: README.md
parsers/go/: .gitignore  README.md  binary.go  binary_test.go  calc.go  calc_test.go  conformance_test.go  diff.go  diff_test.go  engine.go  engine_test.go  go.mod  json.go  json_test.go  markers.go  meta.go  object.go  options.go  parser.go  parser_test.go  stringify.go  stringify_test.go  synx.go  value.go  value_test.go
parsers/java/: .gitignore  README.md  pom.xml
parsers/swift/: .gitignore  Package.swift  README.md
parsers/swift/Sources/Synx/: Synx.swift  SynxBinary.swift  SynxCalc.swift  SynxDiff.swift  SynxEngine.swift  SynxFormatter.swift  (+6 more)
synx_packages/: README.md
synx_packages/@assynx/text-tools/: README.md
synx_packages/template/: README.md
tests/conformance/: README.md
tree-sitter-synx/: README.md  grammar.js  package.json
(+55 files in other folders)
